# rust-opencl

./: Cargo.toml  Makefile  README.md
src/: kernel.cl  main.rs
